cabal-version:      3.12
name:               zoom-chat-transcript-merger

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:       A tool to merge Zoom chat and transcripts.

-- A longer description of the package.
description:     This package provides a command-line tool to merge Zoom chat logs
                 and transcript files into a single, coherent transcript. It supports
                 parsing various formats of Zoom chat and transcript files, aligning
                 messages based on timestamps, and outputting the merged result in
                 a user-friendly format.

-- The license under which the package is released.
license:            NONE

-- The package author(s).
author:             Eiko

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         eikochanowo@outlook.com

-- A copyright notice.
-- copyright:
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -O2

executable zoom-chat-transcript-merger
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: NewChat
                 , Transcript
                 , SimpleTime

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends: base
                 , bytestring
                 , megaparsec
                 , text
                 , time
                 , optparse-applicative
                 , optparse-generic

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
